--- a/app/src/main/res/layout/activity_display_case.xml
+++ b/app/src/main/res/layout/activity_display_case.xml
@@ -22,6 +22,7 @@
         app:layout_constraintVertical_bias="1.0">
 
         <LinearLayout
+            android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical" android:padding="@dimen/fab_margin">
