--- a/app/src/main/res/layout/fragment_court.xml
+++ b/app/src/main/res/layout/fragment_court.xml
@@ -17,7 +17,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:text="There is no court added yet!"
+        android:text="You have not added any court yet, click on + to add new "
         android:textColor="#000000"
         android:visibility="gone" />
 
